--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-pizza",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://daniilshest.github.io/react-pizzav2/",
+  "homepage": "https://daniilshest.github.io/react-pizzav2",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
